[package]
name = "mongo-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio = "1.25.0"
chrono = "0.4.23" # Used for setting DateTimes
serde = "1.0.152" # Used in the Map Data into Structs section
